[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Jan Larres <jan@majutsushi.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
itertools = "0.10.0"
lazy_static = "1"
nom = "6"
regex = "1"

[dev-dependencies]
proptest = "1.0.0"
